add new data to paragraph

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <p>This site was created by StevenT. It uses data from mapbox.com and weather-stack.com!</p>
+    <p>This site was created by StevenT. It uses data from mapbox.com and weatherstack.com!</p>
     <div class="image">
       <img src="https://picsum.photos/300/300?grayscale" alt="some random image">
     </div>
